tests/ui/use/use-nested-groups-error.stderr
error[E0432]: unresolved import `a::b1::C1`
  --> $DIR/use-nested-groups-error.rs:9:14
   |
LL | use a::{b1::{C1, C2}, B2};
   |              ^^
   |              |
   |              no `C1` in `a::b1`
   |              help: a similar name exists in the module: `C2`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
